  something else than the tile height used by the map.
* Fixed a bug when exporting a tileset with an external image
* Fixed two cases of hanging when using the fill tool
* Fixed tile palette bug of not accounting for gaps in tile ids (old bug)
* Fixed bug of adding a new tile even if cancelling out of new tile dialog
* Fixed NPE when saving a map with no extension - default to .tmx
* Rewrote configuration based on the Preferences class, no more tiled.conf
* Cleaned up TileSet- removed checksumming and rotation/orienation code

0.5.1 - June 15th, 2005

* Added a checkerboard background to tileset palette
* Added support for layer locking (not editable when locked)
* Added support for tmx.gz map files
* Added selection addition and substraction via Shift and Ctrl respectively
* Improved the drawing speed thanks to some thorough testing and suggestions
  (Jerome Blouin)
* Improved transformation so that it respects selections
* Fixed the "Save As Image" feature to use current zoom level
* Fixed drawing on invisible layers
* Fixed selection rectangle to include one more tile
* Fixed loading of plugins that only do export and no import
* Fixed removing tilesets in the Tileset Manager
* Fixed image loading to ensure hardware acceleration is used in Java 1.4 and
  above (Jerome Blouin)
* Fixed a NullPointerException when loading TSX files as imported tilesets
* Fixed an "Unsupported protocol" error when loading TMX files which referenced
  an external tileset under certain conditions
* Fixed a ClassCastException when loading GIFs as tilesets

0.5.0 - December 14th, 2004

* Added width and height attributes to layer element
* Added layer properties, analoguous to tile and map properties
* Added a version attribute to the map tag
* Added a basedir attribute to the tileset tag (suggested by Radomir
  Dopieralski)
* Added support for shared images (merged in Rainer Deyke's shared images code)
* Added support for masked tileset images